--- a/styles/index.css
+++ b/styles/index.css
@@ -109,3 +109,33 @@ a:hover {
     background-color: #2556a3;
 }
 
+.mainInfoTitle {
+    font-size: 36px;
+    font-family: 'Roboto-Bold', 'Times New Roman', Times, serif;
+    color: #1F2937;
+    text-align: center;
+}
+
+.infoCard {
+    width: 180px;
+    text-align: center;
+}
+
+.infoImages {
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+}
+
+.infoImgContainer {
+    border: 4px solid #3882F6;
+    border-radius: 5px;
+    background-image: url("../images/180x180.gif");
+    overflow: hidden;
+}
+
+.infoImgDescription {
+    color: gray;
+    font-size: 18px;
+}
+
