--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,10 @@
     src: url('../fonts/Roboto-Bold.ttf');
 }
 
+@font-face {
+    font-family: 'Roboto-Light-Italic';
+    src: url('../fonts/Roboto-LightItalic.ttf');
+}
 
 * {
     font-family: 'Roboto', 'Times New Roman', Times, serif;
@@ -61,7 +65,7 @@ a:hover {
 }
 
 .landingSection {
-    height: 400px;
+    height: 500px;
 }
 
 #MainTitleContainer {
@@ -109,6 +113,13 @@ a:hover {
     background-color: #2556a3;
 }
 
+/* #MainInfoContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+} */
+
 .mainInfoTitle {
     font-size: 36px;
     font-family: 'Roboto-Bold', 'Times New Roman', Times, serif;
@@ -124,6 +135,8 @@ a:hover {
 .infoImages {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 400px;
     gap: 48px;
 }
 
@@ -131,11 +144,30 @@ a:hover {
     border: 4px solid #3882F6;
     border-radius: 5px;
     background-image: url("../images/180x180.gif");
+    width: 180px;
+    height: 180px;
     overflow: hidden;
 }
 
-.infoImgDescription {
-    color: gray;
-    font-size: 18px;
+#QuoteContainer {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
+.quote {
+    font-size: 36px;
+    font-family: 'Roboto-Light-Italic', 'Times New Roman', Times, serif;
+    color: #1F2937;
+    width: 60%;
+    margin-bottom: 16px;
+}
+
+.quoteAuthor {
+    width: 60%;
+    text-align: right;
+    font-family: 'Roboto-Bold', 'Times New Roman', Times, serif;
+    font-size: 24px;
+}
